--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 **/*.class
 /bin/**.*
 **/*.ini
-**/*.xml
 **/*.MF
 **/*.project
 **/*.iml
@@ -31,8 +30,7 @@
 *.zip
 *.tar.gz
 *.rar
-
+.idea
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/.idea/
